# declaration-parser

./: .gitignore  Makefile  README.md  fill_dates.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: biweekly_full_check.yml  daily_check.yml
