[project]
name = "declaration-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromium>=0.0.0",
    "google-api-python-client>=2.197.0",
    "gspread>=6.2.1",
    "lxml>=6.1.1",
    "oauth2client>=4.1.3",
    "opencv-python>=4.13.0.92",
    "pdf2image>=1.17.0",
    "playwright>=1.60.0",
    "poppler-utils>=0.1.0",
    "pymupdf>=1.27.2.3",
    "pyzbar>=0.1.9",
    "requests>=2.34.2",
]
